# mean-safe

./: Anchor.toml  Cargo.toml  README.md  package.json
programs/multisig/: Cargo.toml
programs/multisig/src/: lib.rs
tests/: mean-multisig.ts  multisig.ts
