[workspace]
members = [
    "programs/*"
]

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.release.build-override]
opt-level = 'z'     # Optimize for size.
incremental = false
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true        # Strip symbols from binary*
