[package]
name = "mean-multisig"
version = "1.14.0"
description = "Mean Multisig"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mean_multisig"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.25.0", features = ["init-if-needed"] }
solana-program = "~1.10.29"